Implemented routing - Implemented custom routing with debug - Created public-pages file structure - Implemented 404 error page - Improved home page

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
         "-dxdebug.client_port=9003",
         "-S",
         "localhost:8000",
-        // "router.php"
+        "router.php"
       ],
       "cwd": "${workspaceRoot}",
       "port": 9003,
